--- a/DatabazovyProjekt/appsettings.json
+++ b/DatabazovyProjekt/appsettings.json
@@ -1,8 +1,9 @@
 {
   "Database": {
-    "User": "tesar2",
-    "Password": "x",
+    "DataSource": ".\\SQLEXPRESS",
     "Name": "tesar2",
-    "DataSource": "193.85.203.188"
+    "IntegratedSecurity": "true",
+    "User": "",
+    "Password": ""
   }
 }
